[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ie_utils"
author = "Pedro Lourenço dos Santos"
author-email = "pedrosantos@student.ie.edu"
description-file = "README.md"

[tool.flit.entrypoints."console_scripts"]
ie_tokenize = "ie_utils.__main__:main"
